--- a/端口说明文档.md
+++ b/端口说明文档.md
@@ -6,8 +6,12 @@
 |  项目module名称         |   服务名           |  端口     | 备注                                             |
 |-------------------------|--------------------|-----------|-------------------------------------------------|
 |  hello                  |   hello            |  8888     |功能集成模块  |
-|  d-eureka-server        |   d-eureka-server  |  8001     |服务注册于发现，云端负载均衡，一个基于 REST 的服务，用于定位服务，以实现云端的负载均衡和中间层服务器的故障转移  |
-|  d-eureka-clinet        |   d-eureka-client  |  8002     |服务注册 -- 测试  |
-|  d-zuul                 |   zuul             |  8003     |API 动态路由，监控，弹性，安全等的边缘服务|
-|  d-ribbon               |   d-ribbon         |  8004     |负载均衡处理  |
-|  d-hystrix              |   d-hystrix        |  8005     |服务超时熔断处理  |
+|  d-eureka-server        |   service-eureka-server  |  8001     |服务注册于发现，云端负载均衡，一个基于 REST 的服务，用于定位服务，以实现云端的负载均衡和中间层服务器的故障转移  |
+|  d-eureka-clinet        |   service-eureka-client  |  8002     |服务注册 -- 测试  |
+|  d-zuul                 |   service-zuul           |  8003     |API 动态路由，监控，弹性，安全等的边缘服务|
+|  d-ribbon               |   service-ribbon         |  8004     |负载均衡处理  |
+|  d-hystrix              |   service-hystrix        |  8005     |服务超时熔断处理  |
+|  d-ribbon-client-1      |   service-ribbon-client|  8006     |负载均衡处理|
+|  d-ribbon-client-2      |   service-ribbon-client|  8007     |负载均衡处理|
+|  d-ribbon-client-3      |   service-ribbon-client|  8008     |负载均衡处理|
+|  d-ribbon-client-4      |   service-ribbon-client|  8009     |负载均衡处理|
